[gd_scene load_steps=12 format=3 uid="uid://gd5gxjt3apk7"]

[ext_resource type="Script" path="res://scene/battle_scene/player_stats_ui.gd" id="1_1c1qk"]
[ext_resource type="PackedScene" uid="uid://b8lojv82xtimu" path="res://scene/battle_scene/stats_unit.tscn" id="2_rg52q"]
[ext_resource type="Texture2D" uid="uid://cpk3srqq37dvb" path="res://arts/gui/base_sprites.png" id="3_plbqw"]
[ext_resource type="PackedScene" uid="uid://cyybcjd1msgce" path="res://scene/battle_scene/buff_container.tscn" id="4_cfyat"]
[ext_resource type="Script" path="res://scene/battle_scene/Description.gd" id="4_svuod"]
[ext_resource type="PackedScene" uid="uid://ci6jrxlhscep" path="res://scene/battle_scene/skill_container.tscn" id="5_8wkgs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c2uxt"]
atlas = ExtResource("3_plbqw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp65k"]
atlas = ExtResource("3_plbqw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3qbm"]
atlas = ExtResource("3_plbqw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_coti0"]
atlas = ExtResource("3_plbqw")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6myvc"]
atlas = ExtResource("3_plbqw")
region = Rect2(0, 16, 16, 16)

[node name="PlayerStatsUi" type="Control"]
custom_minimum_size = Vector2(185, 137)
layout_mode = 3
anchors_preset = 0
offset_left = 49.0
offset_top = 93.0
offset_right = 234.0
offset_bottom = 230.0
mouse_filter = 2
script = ExtResource("1_1c1qk")

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -14.0
offset_top = -19.0
offset_right = 214.0
offset_bottom = 109.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="SideBar" type="PanelContainer" parent="MainPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer/SideBar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PlayerStats" type="Button" parent="MainPanel/HBoxContainer/SideBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "状态"

[node name="Buff" type="Button" parent="MainPanel/HBoxContainer/SideBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "buff"

[node name="Skill" type="Button" parent="MainPanel/HBoxContainer/SideBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "技能"

[node name="PlayerStatsContainer" type="PanelContainer" parent="MainPanel/HBoxContainer"]
custom_minimum_size = Vector2(184, 128)
layout_mode = 2
mouse_filter = 2

[node name="StatsGrid" type="GridContainer" parent="MainPanel/HBoxContainer/PlayerStatsContainer"]
layout_mode = 2
mouse_filter = 2
columns = 2

[node name="StatsUnit" parent="MainPanel/HBoxContainer/PlayerStatsContainer/StatsGrid" instance=ExtResource("2_rg52q")]
unique_name_in_owner = true
layout_mode = 2
description = "攻击力"
texture = SubResource("AtlasTexture_c2uxt")

[node name="StatsUnit2" parent="MainPanel/HBoxContainer/PlayerStatsContainer/StatsGrid" instance=ExtResource("2_rg52q")]
unique_name_in_owner = true
layout_mode = 2
description = "防御力"
texture = SubResource("AtlasTexture_cp65k")

[node name="StatsUnit3" parent="MainPanel/HBoxContainer/PlayerStatsContainer/StatsGrid" instance=ExtResource("2_rg52q")]
unique_name_in_owner = true
layout_mode = 2
description = "力量"
texture = SubResource("AtlasTexture_j3qbm")

[node name="StatsUnit4" parent="MainPanel/HBoxContainer/PlayerStatsContainer/StatsGrid" instance=ExtResource("2_rg52q")]
unique_name_in_owner = true
layout_mode = 2
description = "最大生命值"
texture = SubResource("AtlasTexture_coti0")

[node name="StatsUnit5" parent="MainPanel/HBoxContainer/PlayerStatsContainer/StatsGrid" instance=ExtResource("2_rg52q")]
unique_name_in_owner = true
layout_mode = 2
description = "最大耐力"
texture = SubResource("AtlasTexture_6myvc")

[node name="BuffContainer" parent="MainPanel/HBoxContainer" instance=ExtResource("4_cfyat")]
visible = false
layout_mode = 2

[node name="SkillContainer" parent="MainPanel/HBoxContainer" instance=ExtResource("5_8wkgs")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsDescription" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = -48.0
offset_top = -94.0
offset_right = -36.0
offset_bottom = -82.0
mouse_filter = 2
script = ExtResource("4_svuod")

[node name="Label" type="Label" parent="StatsDescription"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainPanel/HBoxContainer/SideBar/VBoxContainer/PlayerStats" to="." method="_on_player_stats_pressed"]
[connection signal="pressed" from="MainPanel/HBoxContainer/SideBar/VBoxContainer/Buff" to="." method="_on_buff_pressed"]
[connection signal="pressed" from="MainPanel/HBoxContainer/SideBar/VBoxContainer/Skill" to="." method="_on_skill_pressed"]
